# treeboot

./: .coderabbit.yaml  .markdownlint-cli2.jsonc  .oxfmtrc.json  .treeboot.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  lefthook.yml  mise.toml  rust-toolchain.toml
.codex/environments/: environment.toml
.github/: dependabot.yml  release-please-config.json  renovate-mise.config.js
.github/workflows/: ci.yml  release-please.yml  release.yml  renovate-mise.yml  semantic-pr.yml
crates/treeboot/: Cargo.toml  README.md
crates/treeboot-core/: Cargo.toml  README.md
crates/treeboot-core/assets/: config.schema.json
crates/treeboot-core/examples/: generate_config_schema.rs
crates/treeboot-core/src/: check.rs  commands.rs  config.rs  context.rs  discovery.rs  doctor.rs  env.rs  error.rs  executor.rs  file_actions.rs  file_execution.rs  file_operations.rs  file_planning.rs  file_system.rs  files.rs  git.rs  glob.rs  ignore_rules.rs  init.rs  lib.rs  manual.rs  metadata.rs  output.rs  path_filter.rs  paths.rs  run.rs  runtime.rs  status.rs  teardown.rs  test_support.rs  validation.rs
crates/treeboot-core/src/file_execution/: tests.rs
crates/treeboot-core/src/file_operations/: tests.rs
crates/treeboot-core/src/file_planning/: tests.rs
crates/treeboot-core/src/file_system/: tests.rs
crates/treeboot-core/src/files/: tests.rs
crates/treeboot-core/tests/: public_api.rs
crates/treeboot/src/: main.rs  reporter.rs
crates/treeboot/src/commands/: check.rs  completions.rs  config.rs  doctor.rs  env.rs  init.rs  manual.rs  mod.rs  output.rs  run.rs  schema.rs  status.rs  teardown.rs  version.rs
crates/treeboot/tests/: check.rs  cli.rs  completions.rs  config.rs  doctor.rs  env.rs  init.rs  manual.rs  run.rs  schema.rs  status.rs  teardown.rs  version.rs
crates/treeboot/tests/common/: mod.rs
docs/: ARCHITECTURE.html  ARCHITECTURE.md  SPEC.html  SPEC.md
docs/agents/: architecture.md  copy-sync-metadata-plan.html  dependencies.md  file-operation-progress-output-plan.html  implementation-guidance.md  milestone-5-file-operations-plan.html  milestone-6-command-runtime-plan.html  milestone-8-manual-file-operation-commands-plan.html  new-commands-plan.html  release.md  roadmap.md  teardown-implementation-plan.md  validation.md
schemas/: treeboot.schema.json
scripts/: check-harness.sh  extract-release-notes.sh  generate-metadata.sh  lint-markdown-files.sh  package-config-schema.sh  package-release-asset.sh  release-version.sh
src/: lib.rs  main.rs
tests/: cli.rs
tools/release-helper/: Cargo.toml
tools/release-helper/src/: main.rs
