[package]
name = "treeboot"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lints.rust]
future-incompatible = { level = "warn", priority = -2 }
nonstandard_style = { level = "deny", priority = -1 }
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
large_enum_variant = "deny"
needless_collect = "deny"
redundant_clone = "deny"

[dependencies]
