[package]
name = "treeboot-workspace"
version = "0.9.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[workspace]
members = ["crates/treeboot", "crates/treeboot-core", "tools/release-helper"]
default-members = [
    "crates/treeboot",
    "crates/treeboot-core",
    "tools/release-helper",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.96"
license = "MIT"
repository = "https://github.com/jimeh/treeboot"
homepage = "https://github.com/jimeh/treeboot"

[workspace.lints.rust]
future-incompatible = { level = "warn", priority = -2 }
nonstandard_style = { level = "deny", priority = -1 }
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
large_enum_variant = "deny"
needless_collect = "deny"
redundant_clone = "deny"
