[package]
name = "treeboot-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "treeboot_core"

[lints]
workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2"
toml = "1.1.2"

[dev-dependencies]
schemars = "1.2.1"
serde_json = "1.0.150"
tempfile = "3"
