[package]
name = "treeboot-core"
version = "0.4.1"
description = "Reusable worktree bootstrap engine for the treeboot CLI."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/treeboot-core"
readme = "README.md"
keywords = ["git", "worktree", "bootstrap"]
categories = ["development-tools"]

[lib]
name = "treeboot_core"

[lints]
workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2"
toml = "1.1.2"

[dev-dependencies]
schemars = "1.2.1"
serde_json = "1.0.150"
tempfile = "3"
