[package]
name = "treeboot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
serde_json = "1.0.150"
treeboot-core = { path = "../treeboot-core" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
