[package]
name = "treeboot"
version = "0.4.1"
description = "Bootstrap Git worktrees from one repo-local setup file."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/treeboot"
readme = "README.md"
keywords = ["git", "worktree", "bootstrap", "cli"]
categories = ["command-line-utilities", "development-tools"]

[lints]
workspace = true

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
serde_json = "1.0.150"
treeboot-core = { path = "../treeboot-core", version = "0.4.1" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
