[package]
name = "treeboot-release-helper"
version = "0.8.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
markdown = "1"
zip = { version = "8", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
